--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "url": "https://github.com/Higornmr/aniversario-gtarp-backend/issues"
   },
   "homepage": "https://github.com/Higornmr/aniversario-gtarp-backend#readme",
+  "type": "module",
   "dependencies": {
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "lowdb": "^7.0.1",
-    "node-cron": "^4.2.0"
+    "node-cron": "^3.0.3"
   }
 }
